--- a/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
+++ b/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="site.webmanifest" />
+    <None Include="Properties\PublishProfiles\ZachCashion - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
