--- a/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
+++ b/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
@@ -84,6 +84,7 @@
     <Content Include="Images\html5.jpg" />
     <Content Include="Images\js.jpg" />
     <Content Include="Images\msnet.jpg" />
+    <Content Include="Images\My Blog.png" />
     <Content Include="Images\Profile.JPG" />
     <Content Include="Images\sql.jpg" />
     <Content Include="index.html" />
