--- a/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
+++ b/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
@@ -79,12 +79,18 @@
     <Content Include="favicon-16x16.png" />
     <Content Include="favicon-32x32.png" />
     <Content Include="favicon.ico" />
+    <Content Include="Images\BugTracker.png" />
     <Content Include="Images\csharp.jpg" />
     <Content Include="Images\css3.jpg" />
+    <Content Include="Images\Factorial.png" />
+    <Content Include="Images\FizzBuzz.png" />
     <Content Include="Images\html5.jpg" />
     <Content Include="Images\js.jpg" />
+    <Content Include="Images\JsMath.png" />
     <Content Include="Images\msnet.jpg" />
     <Content Include="Images\My Blog.png" />
+    <Content Include="Images\MyBlog.png" />
+    <Content Include="Images\Palindrome.png" />
     <Content Include="Images\Profile.JPG" />
     <Content Include="Images\sql.jpg" />
     <Content Include="index.html" />
