--- a/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
+++ b/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
@@ -108,6 +108,7 @@
     <Content Include="js\myJavascript.js" />
     <Content Include="js\shBrushJScript.js" />
     <Content Include="js\shCore.js" />
+    <Content Include="js\smtp.js" />
     <Content Include="mail\contact_me.php" />
     <Content Include="Scripts\SyntaxHighlighter\scripts\shAutoloader.js" />
     <Content Include="Scripts\SyntaxHighlighter\scripts\shBrushAppleScript.js" />
