--- a/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
+++ b/ZachCashion_Personal_Website/ZachCashion_Personal_Website.csproj
@@ -79,6 +79,7 @@
     <Content Include="favicon-16x16.png" />
     <Content Include="favicon-32x32.png" />
     <Content Include="favicon.ico" />
+    <Content Include="Images\aws-certified-cloud-practitioner.png" />
     <Content Include="Images\BugTracker.png" />
     <Content Include="Images\csharp.jpg" />
     <Content Include="Images\css3.jpg" />
